--- a/pages/geomarketing.html
+++ b/pages/geomarketing.html
@@ -67,7 +67,7 @@
             <p class="other__paragraph u-margin-top-medium">
                 شکل زیر این مراحل سه گانه را به همراه زیر مراحل آن ها نشان می‌دهد.
             </p>
-            <img src="../img/geo-chart.png" alt="other" class="other__img u-margin-top-medium">
+            <img src="img/geo-chart.png" alt="other" class="other__img u-margin-top-medium">
             <h1 class="other__heading u-margin-top-medium">آماده‌سازی داده‌ها:</h1><br>
             <p class="other__paragraph u-margin-top-medium">
                 مرحله اول داده‌کاوی، آماده‌سازی داده‌هاست که در آن اقداماتی انجام می‌شود. در این مرحله سلسله
@@ -174,7 +174,7 @@
                 انجمنی (Association rules) است. انواع متنوعی از الگوریتم‌های مطرح یادگیری مدل، برای هر کدام از سه
                 روش داده کاوی مذکور وجود دارند، که در ادامه روش دسته بندی تشریح خواهد شد.
             </p>
-            <img src="../img/association.webp" alt="other" class="other__img u-margin-top-medium">
+            <img src="img/association.webp" alt="other" class="other__img u-margin-top-medium">
             <h1 class="other__heading u-margin-top-medium">ارزیابی و تفسیر مدل:</h1><br>
             <p class="other__paragraph u-margin-top-medium">
                 در این مرحله دانش تولید شده در مرحله قبل ارزیابی شده و مورد تفسیر قرار می‌گیرد. منظور از ارزیابی
