--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navigation">
         <div>
             <a href="index.html">
-                <img src="img/logo.png" alt="لوگو" class="navigation__logo">
+                <img src="img/logo.png" alt="logo" class="navigation__logo">
             </a>
         </div>
         <div class="navigation__mobilenav">
@@ -40,7 +40,7 @@
                         <div class="navigation__mobilenav--menu-sub" id="mobileProducts">
                             <ul class="navigation__mobilenav--list">
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="web-gis">
+                                    <a href="pages/webgis.html" class="navigation__mobilenav--link" id="web-gis">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -48,7 +48,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="geobi">
+                                    <a href="pages/geobi.html" class="navigation__mobilenav--link" id="geobi">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -56,7 +56,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="fsm">
+                                    <a href="pages/fsm.html" class="navigation__mobilenav--link" id="fsm">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -64,7 +64,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="senama">
+                                    <a href="pages/senama.html" class="navigation__mobilenav--link" id="senama">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -72,7 +72,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="twin">
+                                    <a href="pages/twin.html" class="navigation__mobilenav--link" id="twin">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -92,7 +92,8 @@
                         <div class="navigation__mobilenav--menu-sub" id="projects">
                             <ul class="navigation__mobilenav--list">
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#l" class="navigation__mobilenav--link" id="system-prodiction">
+                                    <a href="pages/system-production.html" class="navigation__mobilenav--link"
+                                        id="system-prodiction">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -100,7 +101,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="datascan">
+                                    <a href="pages/datascan.html" class="navigation__mobilenav--link" id="datascan">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -108,7 +109,8 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="gather-info">
+                                    <a href="pages/gather-info.html" class="navigation__mobilenav--link"
+                                        id="gather-info">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -116,7 +118,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="man">
+                                    <a href="pages/man.html" class="navigation__mobilenav--link" id="man">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -136,7 +138,7 @@
                         <div class="navigation__mobilenav--menu-sub" id="skills">
                             <ul class="navigation__mobilenav--list">
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="counceling">
+                                    <a href="pages/counceling.html" class="navigation__mobilenav--link" id="counceling">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -160,7 +162,8 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="geomarketing">
+                                    <a href="pages/geomarketing.html" class="navigation__mobilenav--link"
+                                        id="geomarketing">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -168,7 +171,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="gis">
+                                    <a href="pages/gis.html" class="navigation__mobilenav--link" id="gis">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -176,7 +179,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link" id="map">
+                                    <a href="pages/map.html" class="navigation__mobilenav--link" id="map">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -184,7 +187,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#products" class="navigation__mobilenav--link">
+                                    <a href="#" class="navigation__mobilenav--link">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -192,7 +195,7 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#products" class="navigation__mobilenav--link">
+                                    <a href="#" class="navigation__mobilenav--link">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
@@ -242,7 +245,7 @@
                     <div class="hover-menu">
                         <ul class="hover-menu__list">
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="web-gis">
+                                <a href="pages/webgis.html" class="hover-menu__link" id="web-gis">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         inventory_2
                                     </span>
@@ -252,7 +255,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="geobi">
+                                <a href="pages/geobi.html" class="hover-menu__link" id="geobi">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         inventory_2
                                     </span>
@@ -262,7 +265,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="fsm">
+                                <a href="pages/fsm.html" class="hover-menu__link" id="fsm">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         inventory_2
                                     </span>
@@ -272,7 +275,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="senama">
+                                <a href="pages/senama.html" class="hover-menu__link" id="senama">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         inventory_2
                                     </span>
@@ -282,7 +285,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="twin">
+                                <a href="pages/twin.html" class="hover-menu__link" id="twin">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         inventory_2
                                     </span>
@@ -304,7 +307,7 @@
                     <div class="hover-menu">
                         <ul class="hover-menu__list">
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="system-production">
+                                <a href="pages/system-production.html" class="hover-menu__link" id="system-production">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         <span class="material-symbols-outlined">
                                             engineering
@@ -316,7 +319,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="datascan">
+                                <a href="pages/datascan.html" class="hover-menu__link" id="datascan">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         document_scanner
                                     </span>
@@ -326,7 +329,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="gather-info">
+                                <a href="pages/gather-info.html" class="hover-menu__link" id="gather-info">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         storage
                                     </span>
@@ -336,7 +339,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="man">
+                                <a href="pages/man.html" class="hover-menu__link" id="man">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         gavel
                                     </span>
@@ -358,7 +361,7 @@
                     <div class="hover-menu">
                         <ul class="hover-menu__list">
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="counceling">
+                                <a href="pages/counceling.html" class="hover-menu__link" id="counceling">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         monitoring
                                     </span>
@@ -388,7 +391,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="geomarketing">
+                                <a href="pages/geomarketing.html" class="hover-menu__link" id="geomarketing">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         database
                                     </span>
@@ -398,7 +401,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="gis">
+                                <a href="pages/gis.html" class="hover-menu__link" id="gis">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         location_on
                                     </span>
@@ -408,7 +411,7 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link" id="map">
+                                <a href="pages/map.html" class="hover-menu__link" id="map">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         map
                                     </span>
@@ -736,43 +739,7 @@
             </div>
         </section>
     </main>
-    <footer class=" footer u-margin-top-big">
-        <div class="footer__logobox">
-            <img src="img/logo-white.png" alt="logo" class="footer__logo">
-        </div>
-        <div class="row">
-            <div class="col-1-of-2">
-                <h3 class="heading-tertiary footer__heading">
-                    اطلاعات تماس
-                </h3>
-                <p class="footer__text--left" id="contactUs">
-                    <span>آدرس:</span> &nbsp;&nbsp;&nbsp;خیابان مطهری، پایین تر از سهروردی، بن بست نفیسی پلاک ۲ <br><br>
-                    <span>تلفن:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ۸۸۴۴۸۸۴۴-۰۲۱ <br><br>
-                    <span>ایمیل:</span> &nbsp;&nbsp; contact@example.com <br><br>
-                    <span>ساعت کار:</span> &nbsp;&nbsp; ۸ تا ۱۷ <br><br>
-                </p>
-            </div>
-            <div class="col-1-of-2">
-                <h3 class="heading-tertiary footer__heading">
-                    تاریخچه
-                </h3>
-                <p class="footer__text--right">
-                    شرکت <span>داده کاوان هوشمند کیمیا</span> از سال ۱۳۸۹ با توجه به تخصص مدیران مربوطه در امور تولید،
-                    تحلیل، مشاوره و... سیستم های کاربردی مکانیزه فعالیت داشته و با توجه به آشنایی متخصصین شرکت با سیستم
-                    های اطلاعات مکانی (GIS) و تجارب موجود در این زمینه، در سال ۱۴۰۰ تصمیم به بهره برداری از خدمات تخصصی
-                    متخصصین باتجربه در حوزه اطلاعات جغرافیایی گرفته شد.
-                </p>
-            </div>
-        </div>
-        <div class="footer__copyright">
-            <p class="footer__copyright--persian">
-                &copy; کلیه حقوق مادی و معنوی این سایت متعلق به داده کاوان هوشمند کیمیا می باشد.
-            </p>
-            <p class="footer__copyright--english">
-                &copy; Copyright <span>Dadeh Kavan Hooshmand Kimia</span>. All Rights Reserved
-            </p>
-        </div>
-    </footer>
+    <footer include-html="footer.html"></footer>
     <div class="overlay" id="overlay"></div>
     <script src="common.js" type="text/javascript"></script>
     <script src="home.js" type="text/javascript"></script>
