--- a/pages/geomarketing.html
+++ b/pages/geomarketing.html
@@ -489,7 +489,7 @@
                     استفاده از الگوریتم رایانه‌ای یا یک شیوه آماری نیست؛ بلکه فرآیندی است که به وسیله اطلاعات تکنولوژی
                     جدیدتری یا پشتوانه‌ای را برای تصمیم‌گیری‌ها فراهم می‌کند.
                 </p>
-                <img src="../img/geo.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/geo.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-big">تکنیک‌های داده‌کاوی به دو گروه تقسیم شده است:</h1><br>
                 <ul class="other__list u-margin-top-medium">
                     <li class="other__items">
@@ -648,7 +648,7 @@
                     انجمنی (Association rules) است. انواع متنوعی از الگوریتم‌های مطرح یادگیری مدل، برای هر کدام از سه
                     روش داده کاوی مذکور وجود دارند، که در ادامه روش دسته بندی تشریح خواهد شد.
                 </p>
-                <img src="../img/association.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/association.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">ارزیابی و تفسیر مدل:</h1><br>
                 <p class="other__paragraph u-margin-top-medium">
                     در این مرحله دانش تولید شده در مرحله قبل ارزیابی شده و مورد تفسیر قرار می‌گیرد. منظور از ارزیابی
