--- a/pages/gis.html
+++ b/pages/gis.html
@@ -476,7 +476,7 @@
         <div class="other__container">
             <div class="other__text">
                 <h1 class="other__heading">سیستم‌های اطلاعات مکانی (GIS)</h1>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/gis.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">
                     فعالیت‌های فرآوری، ذخیره، به‌هنگام‌سازی، پردازش، تحلیل، ارائه و تهیه نقشه‌ها، اطلس‌ها و سایر اطلاعات
                     مکانی خدماتی است که در این زمینه توسط شرکت انجام می‌پذیرد. این خدمات علاوه بر یاری رساندن به مدیران
