--- a/pages/map.html
+++ b/pages/map.html
@@ -476,7 +476,7 @@
         <div class="other__container">
             <div class="other__text">
                 <h1 class="other__heading">نقشه‌برداری و جمع‌آوری اطلاعات</h1>
-                <img src="../img/map.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/map.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">خدمات نقشه‌برداری و جمع‌آوری اطلاعات شركت، بر پایه سه
                     اصل
                     تجربه، دقت و تعهد و
