--- a/pages/webgis.html
+++ b/pages/webgis.html
@@ -476,7 +476,7 @@
         <div class="other__container">
             <div class="other__text">
                 <h1 class="other__heading">ساما‌نه توانمند (Web GIS)</h1><br>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/webgis.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">
                     امکانات سامانه توانمند این سامانه در ۲ سطح به شرح زیر پیاده‌سازی شده است:
                 </p>
