--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
             <div class="section-products__items">
                 <div class="section-products__card">
                     <img src="img/product-1.webp" alt="product-1">
-                    <a href="#" class="section-products__card--overlay" id="web-gis">
+                    <a href="pages/webgis.html" class="section-products__card--overlay" id="web-gis">
                         <span>
                             سامانه توانمند: Web GIS
                         </span>
@@ -579,7 +579,7 @@
                 </div>
                 <div class="section-products__card">
                     <img src="img/product-2.webp" alt="product-1">
-                    <a href="#" class="section-products__card--overlay" id="geobi">
+                    <a href="pages/geobi.html" class="section-products__card--overlay" id="geobi">
                         <span>
                             سامانه داشبورد مکانی کیمیا: GEOBI
                         </span>
@@ -587,7 +587,7 @@
                 </div>
                 <div class="section-products__card">
                     <img src="img/product-3.webp" alt="product-1">
-                    <a href="#" class="section-products__card--overlay" id="fsm">
+                    <a href="pages/fsm.html" class="section-products__card--overlay" id="fsm">
                         <span>
                             سامانه خدمات مدیریت میدانی: FSM
                         </span>
@@ -595,7 +595,7 @@
                 </div>
                 <div class="section-products__card">
                     <img src="img/product-4.webp" alt="product-1">
-                    <a href="#" class="section-products__card--overlay" id="senama">
+                    <a href="pages/senama.html" class="section-products__card--overlay" id="senama">
                         <span>
                             سامانه سه نما
                         </span>
@@ -603,7 +603,7 @@
                 </div>
                 <div class="section-products__card">
                     <img src="img/product-5.webp" alt="product-1">
-                    <a href="#" class="section-products__card--overlay" id="twin">
+                    <a href="pages/twin.html" class="section-products__card--overlay" id="twin">
                         <span>
                             سامانه تویین: Twin
                         </span>
