fixing more images

--- a/pages/fsm.html
+++ b/pages/fsm.html
@@ -489,7 +489,7 @@
                     در مورد هر نوع تجهیز و دارایی، موقعیت مکانی و مسیریابی را ارائه می‌کند، بلکه امکان دسترسی یکپارچه به
                     سایر اطلاعات مورد نیاز از جمله راه‌نماها، دستورالعمل‌ها و... را نیز فراهم می‌نماید.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/fsm_1.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">
                     نسخه موبایل سامانه برای کار میدانی طراحی شده است. این سامانه فقط یک تقویم یا دستورالعمل را در دستان
                     تکنسین‌ها و مهندسان قرار نمی دهد، بلکه دید کامل را برای حداکثر بهره‌وری ارائه می‌نماید. تکنسین‌ها با
@@ -512,7 +512,7 @@
                     بازدیدها سروکار دارند، نمی‌توانند به تنهایی بر مهارت‌های توزیع و بازدید نظارت داشته باشند تا
                     مؤثرترین تصمیمات و زمان‌بندی را هدایت کنند. به این منظور می‌بایست از این سامانه استفاده نمایند.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/fsm_2.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">سامانه دارای سه قسمت اصلی می‌باشد:</h1>
                 <ul class="other__list u-margin-top-medium">
                     <li class="other__items">
@@ -534,7 +534,7 @@
                         سامانه موبایل
                     </li>
                 </ul>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/fsm_3.png" alt="other" class="other__img u-margin-top-medium">
                 <ul class="other__list u-margin-top-medium">
                     <li class="other__items">
                         <span class="material-symbols-outlined">
@@ -645,7 +645,7 @@
                         گزارش‌ها متنوع از بازدیدها انجام شده در حال انجام و برنامه‌ریزی شده فراهم خواهد بود.
                     </li>
                 </ul>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/fsm_4.png" alt="other" class="other__img u-margin-top-medium">
             </div>
         </div>
     </main>
