--- a/pages/geobi.html
+++ b/pages/geobi.html
@@ -476,7 +476,7 @@
         <div class="other__container">
             <div class="other__text">
                 <h1 class="other__heading">سامانه داشبورد مکانی کیمیا (GEOBI)</h1><br>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/geobi_1.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">
                     هوش تجاری مکانی مفهومی است که براساس تحلیل اطلاعات مکانی (جغرافیایی) بر روی نقشه، ظرفیتی برای
                     سازمان‌‌دهی و درک جامعی از اطلاعات را ایجاد می‌کند . این امر از طریق استفاده از روابط ذاتی اطلاعات
@@ -491,7 +491,7 @@
                     تحلیل و گزارشات مدیریتی در قالب سامانه کیمیا به‌صورت داشبوردهای مدیریتی، بستر «هوش تجاری مکانی» را
                     برای سازمان فراهم می‌آورند.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/geobi_2.png" alt="other" class="other__img u-margin-top-medium">
             </div>
         </div>
     </main>
