fixing header video

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         <header class="header">
             <div class="row">
                 <div class="bg-video">
-                    <video class="bg-video__content" autoplay muted loop>
+                    <video autoplay muted playsinline loop class="bg-video__content">
                         <source src="img/map.webm" type="video/webm">
                         Your browser is not supported
                     </video>
