fixing more images again

--- a/pages/senama.html
+++ b/pages/senama.html
@@ -476,7 +476,7 @@
         <div class="other__container">
             <div class="other__text">
                 <h1 class="other__heading">سامانه سه‌نما</h1>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/senama_1.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">
                     نمایشگر تحت وب مدل‌های سه‌بعدی با بهره‌برداری از تکنولوژی‌های Open Souce به گونه‌ای توسعه یافته که
                     بتواند حجم عظیمی از داده‌های مکانی که به صورت ابر نقطه تولید گردیده‌اند را با دقت و سرعت فوق‌العاده
@@ -567,6 +567,7 @@
                         داشتن نقاط کنترل زمینی تولید نمود.
                     </li>
                 </ul>
+                <img src="../img/senama_2.png" alt="other" class="other__img u-margin-top-medium">
             </div>
         </div>
     </main>
