--- a/pages/twin.html
+++ b/pages/twin.html
@@ -496,27 +496,28 @@
                         اتفاقاتی که در دنیای واقعی می‌افتد را می‌دهد.
                     </li>
                 </ul>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_1.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">ویژگی‌های Digital Twin:</h1>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_2.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">اهداف:</h1>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_3.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">کاربردها:</h1>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_4.png" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_5.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">دو‌قلوی دیجیتال شهری:</h1>
                 <p class="other__paragraph u-margin-top-medium">
                     در قلمروی شهرهای هوشمند، دو‌قلوی دیجیتال، یک مدل مجازی از دنیای واقعی است که به سرعت در حال
                     تبدیل‌شدن به ابزاری ضروری برای تجسم بهتر از شهر در زمان واقعی، با استفاده از منابع داده‌ای از
                     ساختمان‌ها، زیرساخت‌های شهری، تأسیسات، کسب‌و‌کار، جابه‌جایی افراد و وسایل نقلیه هستند.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_6.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">پروژه‌های نمونه:</h1>
                 <p class="other__paragraph u-margin-top-medium">
                     سرمایه‌گذاری ۷۳‌میلیون دلاری سنگاپور در پروژه مجازی‌سازی این شهر یک مدل سه‌بعدی دیجیتال از شهر که
                     می‌تواند به عنوان بستر آزمایش توسط سازمان‌های دولتی، مشاغل و محققان برای ساختن شهر با مقاومت بیشتر
                     استفاده شود.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_7.png" alt="other" class="other__img u-margin-top-medium">
                 <p class="other__paragraph u-margin-top-medium">
                     برای شهر اینچئون یک دوقلو دیجیتال ساخته و در اوایل سال ۲۰۲۱ معرفی شد. در سال‌های اخیر، کره‌جنوبی
                     افزایش تب دنگی را تجربه کرده است که توسط پشه‌ها منتقل می‌شود. در این پروژه بررسی شد چگونه تغییرات آب
@@ -525,13 +526,14 @@
                     جغرافیایی و اطلاعات سرویس ملی هواشناسی، تلفیق شده و در سیستم مانتیورینگ قابل دسترسی است. سیستم
                     مانیتورینگ نمونه‌ای از یک آزمایش فوق‌العاده آینده‌نگر شهر هوشمند بود که در اینچئون آشکار شد.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <img src="../img/twin_8.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">زیرساخت پیاده‌سازی‌شده توسط شرکت:</h1>
                 <p class="other__paragraph u-margin-top-medium">
                     شرکت داده‌کاوان هوشمند کیمیا با سابقه ۱۱ ساله در پیاده‌سازی سامانه‌های نرم‌افزاری، خصوصاً
                     زیرساخت‌های مکان‌محور و تحلیل و داده‌کاوی مکانی، تاکنون زیرساخت‌های زیر را پیاده‌سازی نموده است که
                     از الزامات راه‌اندازی دوقلوی دیجیتال است:
                 </p>
+                <img src="../img/twin_9.png" alt="other" class="other__img u-margin-top-medium">
                 <h1 class="other__heading u-margin-top-medium">سامانه تویین (زیرسیستم حمل‌ونقل عمومی):</h1>
                 <p class="other__paragraph u-margin-top-medium">
                     این سامانه، یک همانند واقعی به‌صورت نقشه سه‌بُعدی بلادرنگ از حمل‌ونقل عمومی است. قطارهای مترو و
