add image slider

--- a/pages/fsm.html
+++ b/pages/fsm.html
@@ -503,7 +503,25 @@
                     را دارد - از جمله پیام‌های گروهی، صدا و ویدئو- به کارشناسان، دفتر پشتیبان، مدیریت و یکدیگر متصل
                     شوند.
                 </p>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <div class="slider-container">
+                    <div class="slider-container__slide fade">
+                        <img src="../img/fsm_slide1.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/fsm_slide2.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/fsm_slide3.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <a class="slider-container__slide-btn right" id="left">&#10094;</a>
+                    <a class="slider-container__slide-btn left" id="right">&#10095;</a>
+                </div>
+                <br>
+                <div class="dots">
+                    <span class="dots__dot" id="dot1"></span>
+                    <span class="dots__dot" id="dot2"></span>
+                    <span class="dots__dot" id="dot3"></span>
+                </div>
                 <p class="other__paragraph u-margin-top-medium">
                     مدیریتِ فعالیت‌هایِ کاری در مرکز عملیات خدمات میدانی قرار دارد. برای افزایش عملکرد و کاهش هزینه‌ها و
                     همچنین نظارت مستقیم بر عملکرد تیم‌های بازبینی، باید فراتر از قلم و کاغذ حرکت کرد و فرآیندهای میدانی
@@ -652,6 +670,7 @@
 
     <footer include-html="../footer.html"></footer>
     <script src="../common.js" type="text/javascript"></script>
+    <script src="../slider.js" type="text/javascript"></script>
 </body>
 
 </html>
