--- a/pages/webgis.html
+++ b/pages/webgis.html
@@ -739,12 +739,51 @@
                         گزارشات میزان کارکرد کاربران
                     </li>
                 </ul>
-                <img src="../img/gis.webp" alt="other" class="other__img u-margin-top-medium">
+                <div class="slider-container">
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider1.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider2.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider3.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider4.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider5.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider6.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider7.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <div class="slider-container__slide fade">
+                        <img src="../img/webgis_slider8.png" alt="First Slide" class="slider-container__slide--img">
+                    </div>
+                    <a class="slider-container__slide-btn right" id="left">&#10094;</a>
+                    <a class="slider-container__slide-btn left" id="right">&#10095;</a>
+                </div>
+                <br>
+                <div class="dots">
+                    <span class="dots__dot" id="dot1"></span>
+                    <span class="dots__dot" id="dot2"></span>
+                    <span class="dots__dot" id="dot3"></span>
+                    <span class="dots__dot" id="dot4"></span>
+                    <span class="dots__dot" id="dot5"></span>
+                    <span class="dots__dot" id="dot6"></span>
+                    <span class="dots__dot" id="dot7"></span>
+                    <span class="dots__dot" id="dot8"></span>
+                </div>
             </div>
         </div>
     </main>
     <footer include-html="../footer.html"></footer>
     <script src="../common.js" type="text/javascript"></script>
+    <script src="slider-webgis.js" type="text/javascript"></script>
 </body>
 
 </html>
