add image slider

--- a/pages/webgis.html
+++ b/pages/webgis.html
@@ -783,7 +783,7 @@
     </main>
     <footer include-html="../footer.html"></footer>
     <script src="../common.js" type="text/javascript"></script>
-    <script src="slider-webgis.js" type="text/javascript"></script>
+    <script src="webgis-slider.js" type="text/javascript"></script>
 </body>
 
 </html>
