--- a/index.html
+++ b/index.html
@@ -479,7 +479,8 @@
             <div class="row">
                 <div class="bg-video">
                     <video autoplay muted playsinline loop class="bg-video__content">
-                        <source src="img/map2.webm" type="video/webm">
+                        <source src="img/map1.webm" type="video/webm">
+                        <source src="img/map1.mp4" type="video/mp4">
                         Your browser is not supported
                     </video>
                 </div>
