--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
-                                    <a href="#" class="navigation__mobilenav--link">
+                                    <a href="pages/towlid.html" class="navigation__mobilenav--link">
                                         <span class="material-symbols-outlined">
                                             arrow_left
                                         </span>
-                                        تهیه Mater Plan
+                                        تهیه Master Plan
                                     </a>
                                 </li>
                                 <li class="navigation__mobilenav--item">
@@ -371,7 +371,8 @@
                                 </a>
                             </li>
                             <li class="hover-menu__item">
-                                <a href="#" class="hover-menu__link">
+                                <a href="pages/towlid.<html>
+                                </html>" class="hover-menu__link">
                                     <span class="material-symbols-outlined hover-menu__link--icon">
                                         person
                                     </span>
@@ -386,7 +387,7 @@
                                         account_tree
                                     </span>
                                     <span class="hover-menu__link--title">
-                                        تهیه Mater Plan
+                                        تهیه Master Plan
                                     </span>
                                 </a>
                             </li>
